--- a/games/templates/games/index.html
+++ b/games/templates/games/index.html
@@ -25,7 +25,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4">
-                                <img src={{post.img_url}} class="img-fluid" alt="...">
+                                <img src="{{ post.img_url }}" class="img-fluid" alt="...">
                             </div>
                             <div class="col-md-8">
                                 <h5 class="card-title">{{post.title}}</h5>
